# data-analytics-tubes

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: __init__.py  app.py  charts.py  data_loader.py
dashboard/pages/: data_quality.py  overview.py  regional_comparison.py  trends.py  vulnerability.py
data/api/: raw_garis_kemiskinan.json  raw_ipm_sp2010.json  raw_keparahan_kemiskinan.json  raw_pengangguran_terbuka.json  raw_persentase_miskin.json
data/archive/: raw_garis_kemiskinan.json  raw_garis_kemiskinan_20260605T155040Z.json  raw_ipm_sp2010.json  raw_keparahan_kemiskinan_20260605T155042Z.csv  raw_keparahan_kemiskinan_20260605T155042Z.json  raw_pengangguran_terbuka.json  raw_pengangguran_terbuka_20260605T155043Z.json  raw_persentase_miskin.json  raw_persentase_miskin_20260605T155041Z.csv  raw_persentase_miskin_20260605T155041Z.json
data/manifest/: ingest_manifest.csv
data/processed/: cluster_model_manifest.csv  feature_dictionary.csv  panel_kemiskinan_jabar_preprocessed.csv  preprocess_manifest.csv  region_clusters_2024.csv
data/raw/: raw_garis_kemiskinan.csv  raw_ipm_sp2010.json  raw_ipm_sp2010_20260605T155042Z.csv  raw_keparahan_kemiskinan_20260604T053634Z.json  raw_pengangguran_terbuka.csv  raw_pengangguran_terbuka_20260604T053635Z.csv
notebooks/: OSEMN.ipynb
reports/exploration/: correlation_matrix_latest.csv  descriptive_stats_latest.csv  (+4 more)
scripts/: explore_analysis.py  extract_api.py  fetch_api_docs.py  model_clustering.py  orchestrate_prefect.py  preprocess_data.py  validate_processed_data.py
(+11 files in other folders)
